@@ -12,7 +12,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 @Service
 public class CategoryServiceImpl implements CategoryService {
@@ -20,10 +19,10 @@ public class CategoryServiceImpl implements CategoryService {
     private CategoryRepository categoryRepository;
     @Autowired
     private CategoryMapper categoryMapper;
+
     public CategoryResponse addCategory(CategoryReqDto reqDto){
       try {
-
-        Category category = categoryMapper.toEntity(reqDto);
+          Category category = categoryMapper.toEntity(reqDto);
         Category save = categoryRepository.save(category);
         return categoryMapper.toResponse(save);
     }
@@ -32,9 +31,14 @@ public class CategoryServiceImpl implements CategoryService {
         throw new RecordNotFoundExciption(String.format("can not add product on database"));
     }
     }
-    @Override
-    public List<CategoryResponse> getAllCategory() {
+
+    public List<CategoryResponse> getAll(){
+
         return categoryRepository.findAll().stream()
-                .map(categoryMapper::toResponse).collect(Collectors.toList());
+                .map(categoryMapper::toResponse).toList();
     }
+
+
+
+
 }
